// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render correctly 1`] = `
<div
  className="Code__CodeWrapper-sc-1no9z1g-1 jTyFrG"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="Code__ScrollWrap-sc-1no9z1g-2 djYguF"
  >
    <div
      className="Code__Content-sc-1no9z1g-3 dsHiaX"
    >
      <pre
        className="Code__Pre-sc-1no9z1g-4 bxgykZ"
      >
        such code much programming
      </pre>
    </div>
  </div>
  <div
    className="Code__CopyNotice-sc-1no9z1g-0 cuyWgG"
  >
    Copy to clipboard
  </div>
</div>
`;

exports[`<Code /> should render multi line function correctly with multiCommand=true 1`] = `
<div
  className="Code__CodeWrapper-sc-1no9z1g-1 jTyFrG"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="Code__ScrollWrap-sc-1no9z1g-2 djYguF"
  >
    <div
      className="Code__Content-sc-1no9z1g-3 dsHiaX"
    >
      <pre
        className="Code__Pre-sc-1no9z1g-4 bxgykZ"
      >
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          sudo curl -l git.io/scope -o /usr/local/bin/scope
          

        </div>
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          sudo chmod a+x /usr/local/bin/scope
          

        </div>
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          scope launch https://yjsjsubdx1h8un1f858gp7to8d51zdre@frontend.dev.weave.works
          

        </div>
      </pre>
    </div>
  </div>
  <div
    className="Code__CopyNotice-sc-1no9z1g-0 cuyWgG"
  >
    Copy to clipboard
  </div>
</div>
`;

exports[`<Code /> should render multi line jsx correctly with multiCommand=true 1`] = `
<div
  className="Code__CodeWrapper-sc-1no9z1g-1 jTyFrG"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="Code__ScrollWrap-sc-1no9z1g-2 djYguF"
  >
    <div
      className="Code__Content-sc-1no9z1g-3 dsHiaX"
    >
      <pre
        className="Code__Pre-sc-1no9z1g-4 bxgykZ"
      >
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          <div>
            sudo curl -L git.io/scope -o /usr/local/bin/scope
          </div>
          

        </div>
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          <div>
            sudo chmod a+x /usr/local/bin/scope
          </div>
          

        </div>
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          <div>
            scope launch 
            <wbr />
            https://yjsjsubdx1h8un1f858gp7to8d51zdre@frontend.dev.weave.works
          </div>
          

        </div>
      </pre>
    </div>
  </div>
  <div
    className="Code__CopyNotice-sc-1no9z1g-0 cuyWgG"
  >
    Copy to clipboard
  </div>
</div>
`;

exports[`<Code /> should render multi line string correctly with multiCommand=true 1`] = `
<div
  className="Code__CodeWrapper-sc-1no9z1g-1 jTyFrG"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="Code__ScrollWrap-sc-1no9z1g-2 djYguF"
  >
    <div
      className="Code__Content-sc-1no9z1g-3 dsHiaX"
    >
      <pre
        className="Code__Pre-sc-1no9z1g-4 bxgykZ"
      >
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          sudo curl -l git.io/scope -o /usr/local/bin/scope
          

        </div>
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          sudo chmod a+x /usr/local/bin/scope
          

        </div>
        <div
          className="Code__PaddedLine-sc-1no9z1g-5 cWhzHF"
        >
          scope launch https://yjsjsubdx1h8un1f858gp7to8d51zdre@frontend.dev.weave.works
          

        </div>
      </pre>
    </div>
  </div>
  <div
    className="Code__CopyNotice-sc-1no9z1g-0 cuyWgG"
  >
    Copy to clipboard
  </div>
</div>
`;
